<?xml version="1.0"?>
<package format="2">
  <name>qpOASES</name>
  <version>3.2.1</version>
  <description>The qpOASES Catkin Package</description>
  <maintainer email="alessio@vicarious.com">Alessio Rocchi</maintainer>
  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>

</package>